--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ env_logger = "0.11.3"
 sha2 = "0.10.8"
 hkdf = "0.12.4"
 chacha20poly1305 = "0.10.1"
-hmac = "0.12.1"
+ecdsa = "0.16.9"
 
 # Library target for fuzzing
 [lib]
