--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ sha2 = "0.10.8"
 hkdf = "0.12.4"
 chacha20poly1305 = "0.10.1"
 ecdsa = "0.16.9"
+hmac = "0.12.1"
 
 # Library target for fuzzing
 [lib]
